// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    {
      "className": "orion-fusion-theme",
    }
  }
>
  <InjectIntl(List)>
    <List
      ariaSelectionStyle="none"
      dividerStyle="none"
      intl={
        {
          "defaultFormats": {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": {},
          "formatters": {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      isTabFocusDisabled={false}
      paddingStyle="none"
      role="none"
      zIndex={6001}
    >
      <ul
        className="list orion-fusion-theme"
        onKeyDown={[Function]}
        role="list"
      />
    </List>
  </InjectIntl(List)>
</ThemeContextProvider>
`;

exports[`should render with ariaDescribedBy 1`] = `
<div
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <p
    id="list-help"
  >
     Navigate this list using the arrow keys. 
  </p>
  <InjectIntl(List)
    ariaDescribedBy="list-help"
  >
    <InjectIntl(ListItem)
      key="123"
    />
    <InjectIntl(ListItem)
      key="124"
    />
    <InjectIntl(ListItem)
      key="125"
    />
    <InjectIntl(ListItem)
      key="126"
    />
    <InjectIntl(ListItem)
      key="127"
    />
  </InjectIntl(List)>
</div>
`;

exports[`should render with ariaDescribedBy 2`] = `
<div
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <p
    id="list-help"
  >
     Navigate this list using the arrow keys. 
  </p>
  <InjectIntl(List)
    ariaDescribedBy="list-help"
  >
    <InjectIntl(ListItem)
      key="123"
    />
    <InjectIntl(ListItem)
      key="124"
    />
    <InjectIntl(ListItem)
      key="125"
    />
    <InjectIntl(ListItem)
      key="126"
    />
    <InjectIntl(ListItem)
      key="127"
    />
  </InjectIntl(List)>
</div>
`;

exports[`should render with ariaDescription 1`] = `
<ul
  aria-description="Navigate this list using the arrow keys."
  className="list"
  onKeyDown={[Function]}
  role="list"
>
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$123"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$124"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$125"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$126"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$127"
  />
</ul>
`;

exports[`should render with ariaDescription 2`] = `
<ul
  aria-description="Navigate this list using the arrow keys."
  className="list"
  onKeyDown={[Function]}
  role="list"
>
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$123"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$124"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$125"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$126"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$127"
  />
</ul>
`;

exports[`should render with ariaDetails 1`] = `
<div
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <p
    id="list-details"
  >
     Here is some more information about this list. 
  </p>
  <InjectIntl(List)
    ariaDetails="list-details"
  >
    <InjectIntl(ListItem)
      key="123"
    />
    <InjectIntl(ListItem)
      key="124"
    />
    <InjectIntl(ListItem)
      key="125"
    />
    <InjectIntl(ListItem)
      key="126"
    />
    <InjectIntl(ListItem)
      key="127"
    />
  </InjectIntl(List)>
</div>
`;

exports[`should render with ariaDetails 2`] = `
<div
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <p
    id="list-details"
  >
     Here is some more information about this list. 
  </p>
  <InjectIntl(List)
    ariaDetails="list-details"
  >
    <InjectIntl(ListItem)
      key="123"
    />
    <InjectIntl(ListItem)
      key="124"
    />
    <InjectIntl(ListItem)
      key="125"
    />
    <InjectIntl(ListItem)
      key="126"
    />
    <InjectIntl(ListItem)
      key="127"
    />
  </InjectIntl(List)>
</div>
`;

exports[`should render with bottom only divided items 1`] = `
<ul
  className="list divider-bottom-only"
  onKeyDown={[Function]}
  role="list"
>
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$123"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$124"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$125"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$126"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$127"
  />
</ul>
`;

exports[`should render with items 1`] = `
<ul
  className="list"
  onKeyDown={[Function]}
  role="list"
>
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$123"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$124"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$125"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$126"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$127"
  />
</ul>
`;

exports[`should render with mutli select aria attributes with ariaSelectionStyle mutli-select 1`] = `
<ul
  aria-label="Terra.list.multiSelect"
  aria-multiselectable={true}
  className="list"
  onKeyDown={[Function]}
  role="listbox"
>
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$123"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$124"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$125"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$126"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$127"
  />
</ul>
`;

exports[`should render with no items 1`] = `
<ul
  className="list"
  onKeyDown={[Function]}
  role="list"
/>
`;

exports[`should render with null sections 1`] = `
<List
  ariaSelectionStyle="none"
  dividerStyle="standard"
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isTabFocusDisabled={false}
  paddingStyle="none"
  role="listbox"
  zIndex={6001}
>
  <InjectIntl(ListSection)
    isCollapsed={true}
    title="section 1"
  />
  <InjectIntl(ListSection)
    isCollapsed={true}
    title="section 2"
  />
</List>
`;

exports[`should render with single select aria attributes with ariaSelectionStyle single-select 1`] = `
<ul
  aria-label="Terra.list.singleSelect"
  className="list"
  onKeyDown={[Function]}
  role="listbox"
>
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$123"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$124"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$125"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$126"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$127"
  />
</ul>
`;

exports[`should render with standard divided items 1`] = `
<ul
  className="list divider-standard"
  onKeyDown={[Function]}
  role="list"
>
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$123"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$124"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$125"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$126"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$127"
  />
</ul>
`;

exports[`should render with standard padded items 1`] = `
<ul
  className="list padding-standard"
  onKeyDown={[Function]}
  role="list"
>
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$123"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$124"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$125"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$126"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$127"
  />
</ul>
`;

exports[`should render with thin padded items 1`] = `
<ul
  className="list padding-compact"
  onKeyDown={[Function]}
  role="list"
>
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$123"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$124"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$125"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$126"
  />
  <InjectIntl(ListItem)
    isTabFocusDisabled={false}
    key=".$127"
  />
</ul>
`;
